syntax = "proto3";
package chat;

message Message {
  string body = 1;
}

service ChatService {
  rpc SayHelloJira(Message) returns (Message) {}
  rpc SayHelloSlack(Message) returns (Message) {}
  rpc SayHelloRedish(Message) returns (Message) {}
}